exports[`test render displays correctly 1`] = `
<Start>
  <div>
    <button
      className="btn btn-info"
      onClick={[Function]}>
      Click to get started!
    </button>
  </div>
</Start>
`;

exports[`test render displays correctly 2`] = `
<Start>
  <div>
    <input />
    <button
      className="btn btn-info"
      onClick={[Function]}>
      Submit answer
    </button>
  </div>
</Start>
`;

exports[`test render displays correctly 3`] = `
<Start>
  <div>
    <button
      className="btn btn-danger">
      You have failed and will get hacked.
    </button>
    <br />
    <br />
    <a
      className="btn btn-info"
      href="https://github.com/technion/awesome-sec-audit">
      Get source here.
    </a>
    <br />
  </div>
</Start>
`;
